Fixed nav bar alignment

--- a/sass/site/_theme.scss
+++ b/sass/site/_theme.scss
@@ -47,91 +47,19 @@ h1 {
 }
 
 // Nav bar
+.menu-wrap {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 4vh;
+  z-index: 3;
+}
 .menu-container {
   z-index: 3;
   transition: 
     top 450ms ease,
     width 450ms ease, 
     background-color 450ms ease;
-  .ham-container {
-    align-items: center;
-    color: $color-primary;
-    display: flex;
-    height: 60px;
-    justify-content: center;
-    z-index: 2;
-    text-align: center;
-    vertical-align: middle;
-    width: 60px;
-    position: relative;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-    &:hover {
-      cursor: pointer;
-    }
-    span {
-      display: block;
-      position: absolute;
-      height: 3px;
-      width: 50%;
-      background: $color-primary;
-      border-radius: 9px;
-      opacity: 1;
-      left: 15px;
-      -webkit-transform: rotate(0deg);
-      -moz-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
-      transform: rotate(0deg);
-      -webkit-transition: .25s ease-in-out;
-      -moz-transition: .25s ease-in-out;
-      -o-transition: .25s ease-in-out;
-      transition: .25s ease-in-out;
-    }
-    span:nth-child(1) {
-      top: 10px;
-    }
-    
-    span:nth-child(2), span:nth-child(3) {
-      top: 19px;
-    }
-    
-    span:nth-child(4) {
-      top: 28px;
-    }
-    
-    &.open span:nth-child(1) {
-      top: 18px;
-      width: 0%;
-      left: 50%;
-    }
-    
-    &.open span:nth-child(2) {
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-      -o-transform: rotate(45deg);
-      transform: rotate(45deg);
-    }
-    
-    &.open span:nth-child(3) {
-      -webkit-transform: rotate(-45deg);
-      -moz-transform: rotate(-45deg);
-      -o-transform: rotate(-45deg);
-      transform: rotate(-45deg);
-    }
-    
-    &.open span:nth-child(4) {
-      top: 18px;
-      width: 0%;
-      left: 50%;
-    }
-  }
   &.overlay.open {
     top: 0;
     width: 100%;
@@ -139,11 +67,12 @@ h1 {
     border-bottom: 4px solid $color-secondary;
     .navbar {
       min-height: 4.25rem;
+      width: 100%;
     }
   }
-
   .navbar {
     background-color: transparent;
+    min-height: 0;
     opacity: 1;
     width: 90%;
     transition: transform 0.3s ease, opacity 0.3s ease;
@@ -204,7 +133,6 @@ h1 {
   @media (min-width: 481px) {
     align-items: center;
     position: fixed;
-    top: 1vw;
     right: 0;
     width: 55%;
     display: flex;
@@ -213,6 +141,87 @@ h1 {
     .ham-container {
       
     }
+  }
+}
+.ham-container {
+  align-items: center;
+  color: $color-primary;
+  display: flex;
+  height: 45px;
+  justify-content: center;
+  z-index: 2;
+  text-align: center;
+  vertical-align: middle;
+  width: 60px;
+  position: fixed;
+  right: 1%;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  z-index: 5;
+  cursor: pointer;
+  &:hover {
+    cursor: pointer;
+  }
+  span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 50%;
+    background: $color-primary;
+    border-radius: 9px;
+    opacity: 1;
+    left: 15px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+  span:nth-child(1) {
+    top: 10px;
+  }
+  
+  span:nth-child(2), span:nth-child(3) {
+    top: 19px;
+  }
+  
+  span:nth-child(4) {
+    top: 28px;
+  }
+  
+  &.open span:nth-child(1) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+  }
+  
+  &.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  
+  &.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  
+  &.open span:nth-child(4) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
   }
 }
 
